Fix jna include
Co-authored-by: Oliver Kopp <kopp.dev@gmail.com>