@@ -6,8 +6,6 @@ import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import java.net.URI
 import java.util.*
 
-val jnaVersion = "5.17.0"
-
 plugins {
     id("org.jabref.gradle.module")
     id("java-library")
@@ -48,15 +46,6 @@ tasks.withType<com.autonomousapps.tasks.CodeSourceExploderTask>().configureEach 
 // See https://javadoc.io/doc/org.mockito/mockito-core/latest/org.mockito/org/mockito/Mockito.html#0.3
 val mockitoAgent = configurations.create("mockitoAgent")
 
-configurations.all {
-    resolutionStrategy.eachDependency {
-        if (requested.group == "net.java.dev.jna") {
-            useVersion(jnaVersion)
-            because("pin all JNA modules to $jnaVersion on every configuration")
-        }
-    }
-}
-
 dependencies {
     // api(platform(project(":versions")))
 
@@ -81,17 +70,7 @@ dependencies {
     implementation ("org.apache.pdfbox:fontbox")
     implementation ("org.apache.pdfbox:xmpbox")
 
-    implementation("net.sourceforge.tess4j:tess4j") {
-        exclude(group = "net.java.dev.jna", module = "jna")
-        exclude(group = "net.java.dev.jna", module = "jna-platform")
-    }
-
-    implementation(
-        "net.java.dev.jna:jna:${jnaVersion}"
-    )
-    implementation(
-        "net.java.dev.jna:jna-platform:${jnaVersion}"
-    )
+    implementation("net.sourceforge.tess4j:tess4j")
 
     implementation("org.apache.lucene:lucene-core")
     implementation("org.apache.lucene:lucene-queryparser")
@@ -444,6 +423,7 @@ tasks.test {
     }
     jvmArgs = listOf(
         "-javaagent:${mockitoAgent.asPath}",
+        "--enable-native-access=com.sun.jna",
         "--add-opens", "java.base/jdk.internal.ref=org.apache.pdfbox.io",
         "--add-opens", "java.base/java.nio=org.apache.pdfbox.io"
     )
